DB-1600: Consolidate spliceClusterMember and spliceClusterMemberFast into one maven profile--they were nearly identical.